--- a/src/components/Chapter.astro
+++ b/src/components/Chapter.astro
@@ -1,7 +1,6 @@
 ---
-
-import Ico from './Ico.astro'
-import Text from './Text.astro'
+import Ico from './ui/Ico.astro'
+import Text from './ui/Text.astro'
 
 interface Props {
   index: number
@@ -12,11 +11,10 @@ interface Props {
 const { index, title, description } = Astro.props
 ---
 
-
-<div class="chapter-item">
+<div class='chapter-item'>
   <Ico>{index}</Ico>
   <div>
-    <strong class="font-medium self-center">{title}</strong>
-    <Text class="text-left">{description}</Text>
+    <strong class='font-medium self-center'>{title}</strong>
+    <Text class='text-left'>{description}</Text>
   </div>
 </div>
