--- a/src/components/RatingBox.astro
+++ b/src/components/RatingBox.astro
@@ -1,6 +1,6 @@
 ---
-import Text from './Text.astro'
-import Box from './Box.astro'
+import Text from './ui/Text.astro'
+import Box from './ui/Box.astro'
 
 interface Props {
   rating: string
@@ -10,10 +10,10 @@ interface Props {
 const { rating, author } = Astro.props
 ---
 
-<Box class="text-sm rating-box">
-  <img class="w-20" src='/img/stars.webp' alt='hodnocení' />
-  <Text class="text-left mb-0 italic">
+<Box class='text-sm rating-box'>
+  <img class='w-20' src='/img/stars.webp' alt='hodnocení' />
+  <Text class='text-left mb-0 italic'>
     {rating}
   </Text>
-  <strong class="font-semibold">- {author}</strong>
+  <strong class='font-semibold'>- {author}</strong>
 </Box>
