--- a/src/components/SupportBox.astro
+++ b/src/components/SupportBox.astro
@@ -1,7 +1,6 @@
 ---
-
-import Text from './Text.astro'
-import Box from './Box.astro'
+import Text from './ui/Text.astro'
+import Box from './ui/Box.astro'
 
 interface Props {
   headline: string
@@ -9,15 +8,17 @@ interface Props {
   image: string
 }
 
-const { headline, description,image } = Astro.props
-
+const { headline, description, image } = Astro.props
 ---
 
-<Box class="p-0">
-  <img src={image} alt="" class="w-full h-auto mb-2 rounded-t-md"/>
-  <div class="p-6">
-    <h3 class="text-dark font-semibold mb-4">{headline}</h3>
-    <Text class="text-sm text-left">{description}</Text>
-    <slot />
+<Box class='p-0 grid grid-cols-1 grid-rows-[auto_1fr]'>
+  <img src={image} alt='' class='w-full h-auto mb-2 rounded-t-md' />
+  <div class='p-6 grid grid-cols-1 grid-rows-[1fr_auto] gap-2 h-full'>
+    <div>
+      <h3 class='text-dark font-semibold mb-4'>{headline}</h3>
+      <Text class='text-sm text-left'>{description}</Text>
+      <slot name='content' />
+    </div>
+    <slot name='toggle' />
   </div>
 </Box>
