--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,11 @@ import Content from '../components/ui/Content.astro'
       rel='stylesheet'
     />
     <title>Úsměv pro Adama</title>
+    <style>
+      @view-transition {
+        navigation: auto;
+      }
+    </style>
   </head>
   <body>
     <div class='layout'>
