feat: added tables, blockquotes content styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ const steps = await getCollection('steps')
             najít nové smysly života. Příběh Adama je příběhem nejen jeho, ale i všech dětí a rodičů, kteří se
             nevzdávají a i přes životní tragédie dělají své maximum.
           </Text>
-          <div class='flex justify-center'>
+          <div class='flex justify-start'>
             <LinkButton href='/kdo-nam-pomohl' theme='outline'>Kdo nám pomohl?</LinkButton>
           </div>
           <H3 class='text-left'>Proč tato kniha vznikla?</H3>
