feat: changed book section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ const steps = await getCollection('steps')
             najít nové smysly života. Příběh Adama je příběhem nejen jeho, ale i všech dětí a rodičů, kteří se
             nevzdávají a i přes životní tragédie dělají své maximum.
           </Text>
-          <div class='flex justify-start'>
+          <div class='flex justify-star mb-8'>
             <LinkButton href='/kdo-nam-pomohl' theme='outline'>Kdo nám pomohl?</LinkButton>
           </div>
           <H3 class='text-left'>Proč tato kniha vznikla?</H3>
@@ -79,8 +79,9 @@ const steps = await getCollection('steps')
         <div>
           <Text class='text-left'>
             Tato kniha nabízí nejen příběh, ale také konkrétní rady  a praktické tipy pro lidi, kteří čelí ztrátě
-            blízkého včetně přehledného harmonogramu kroků k vyřízení formou letáku ke stažení <TextLink href='/aaa'>zde</TextLink>.
+            blízkého včetně přehledného harmonogramu kroků k vyřízení formou letáku ke stažení.
           </Text>
+          <div class="mt-4 mb-8"><LinkButton href='/aaa' theme="outline">Leták ke stažení</LinkButton></div>
           <Text class='text-left'>
             Prošli jsme poslední 4 roky z fáze „Neboj, bude lépe" přes fázi „Nikdy není tak zle, aby nemohlo být ještě
             hůře" do fáze „Co tě nezabije, to tě posílí" s vedlejšími účinky, jako je nežádoucí černý humor a „lehce"
