feat: meta + sitemap generation

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,15 @@ import Content from '../components/ui/Content.astro'
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
+    <meta name="description" content="Průvodce pozůstalým. Praktická podpora v nejtěžších chvílích." />
+    <meta name="author" content="Adriana Málková" />
+    <meta name="keywords" content="Úsměv pro Adama, kniha, průvodce, pozůstalí, smrt, ztráta, pomoc, podpora" />
+    <meta property="og:title" content="Úsměv pro Adama" />
+    <meta property="og:description" content="Průvodce pozůstalým. Praktická podpora v nejtěžších chvílích." />
+    <meta property="og:image" content="/img/about.webp" />
+    <meta property="og:url" content="https://usmevproadama.cz" />
+    <meta property="og:site_name" content="www.usmevproadama.cz">
+    <meta property="og:type" content="website" />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='generator' content={Astro.generator} />
     <link rel='preconnect' href='https://fonts.googleapis.com' />
