feat: added fetch priority to head image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ const steps = await getCollection('steps')
         </div>
         <div class='bg-[#F9EDE0] p-2 rounded-md w-full md:w-max m-auto'>
           <Box class='inline-block p-3'>
-            <img src='/img/header.webp' alt='' class='w-full md:w-[280px] rounded-md' />
+            <img src='/img/header.webp' alt='' class='w-full md:w-[280px] rounded-md' fetchpriority="high" />
           </Box>
         </div>
       </div>
