chore: autorka.webp

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ const steps = await getCollection('steps')
             našeho příběhu nabízíme oporu, naději a praktické rady všem, kdo čelí ztrátě, nemoci či životní změně.
           </Text>
         </div>
-        <img src='/img/autor.png' class='m-auto rounded-full w-full h-full md:w-[280px] md:h-[280px]' alt='' />
+        <img src='/img/autorka.webp' class='m-auto rounded-full w-full h-full md:w-[280px] md:h-[280px]' alt='' />
       </div>
     </Content>
     <Content bg='light'>
