feat: legal update & icons

--- a/src/pages/kdo-nam-pomohl.astro
+++ b/src/pages/kdo-nam-pomohl.astro
@@ -34,8 +34,8 @@ import HelpBox from '../components/HelpBox.astro'
         />
       </div>
       <Box>
-        Od státu můžete mít nárok mimo pozůstalostních důchodů (za předpokladu plnění podmínek pro jejich získání) i na
-        třeba:
+        Od státu můžete mít nárok mimo pozůstalostních důchodů (za předpokladu plnění podmínek pro jejich získání) i
+        třeba na:
         <ol class='list-decimal ml-8 mt-4'>
           <li>
             dlouhodobé ošetřování člena rodiny (<a href='https://www.cssz.cz/dlouhodobe-osetrovne' class='underline'
