--- a/src/pages/kroky/[id].astro
+++ b/src/pages/kroky/[id].astro
@@ -42,7 +42,7 @@ const { Content: RenderedContent } = await render(step)
           <div>
             <strong class='text-sm mb-2'>Linky důvěry</strong>
             <Text class='text-left text-sm mb-1'>Psychická podpora v krizi</Text>
-            <Text class='text-left text-sm mb-0'>Seznam na <a href='www.capld.cz'>www.capld.cz</a></Text>
+            <Text class='text-left text-sm mb-0'>Seznam na <a href='https://www.capld.cz/linky-duvery-cr/'>www.capld.cz/linky-duvery-cz</a></Text>
           </div>
         </Box>
         <Box class='shadow-none bg-[#FDF8F0] flex flex-col gap-2'>
