--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -183,11 +183,16 @@ const steps = await getCollection('steps')
     </Content>
     <Content bg='white'>
       <H2>Kroky po úmrtí blízkého</H2>
-      <Text class='pb-4'>
+      <Text class='mb-1'>
         Tato kniha nabízí nejen příběh, ale také konkrétní rady a praktické tipy pro lidi, kteří čelí ztrátě blízkého.
       </Text>
+      <Text class="mb-1"><strong>Kniha i praktické rady jsou součástí mého projektu Průvodce pozůstalým</strong></Text>
+      <Text class="mb-8">Ten vznikl jako pomoc lidem v těžkých životních situacích spojených se ztrátou blízké osoby.</Text>
       <div class='grid grid-cols-1 md:grid-cols-3 gap-4'>
         {steps.sort((a, b) => a.data.order - b.data.order).map((step) => <Step step={step.data} />)}
+        <div class="flex items-center p-6 justify-center">
+          <img src="/img/logo_projekt.webp" alt="" class="max-w-full" />
+        </div>
       </div>
     </Content>
     <Content bg='light'>
