feat: favicon x-icon update

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ import Content from '../components/ui/Content.astro'
     <meta property="og:url" content="https://usmevproadama.cz" />
     <meta property="og:site_name" content="www.usmevproadama.cz">
     <meta property="og:type" content="website" />
-    <link rel='icon' type='image/ico' href='/favicon.ico' />
+    <link rel='icon' type='image/x-icon' href='/favicon.ico' />
     <meta name='generator' content={Astro.generator} />
     <link rel='preconnect' href='https://fonts.googleapis.com' />
     <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
