--- a/src/pages/kdo-nam-pomohl.astro
+++ b/src/pages/kdo-nam-pomohl.astro
@@ -11,7 +11,6 @@ import HelpBox from '../components/HelpBox.astro'
 <Layout>
   <main>
     <Content bg='light'>
-      <Backlink />
       <H2 class='text-left'>Kde jsme s Adamem našli finanční pomoc, kterou jsme neměli od státu?</H2>
       <div class='grid grid-cols-1 md:grid-cols-3 gap-4 mb-8'>
         <HelpBox
@@ -23,7 +22,7 @@ import HelpBox from '../components/HelpBox.astro'
         <HelpBox
           label='Donio.cz'
           link='https://www.donio.cz/'
-          note="Na Donio si můžete požádat o založení veřejné sbírky ve vážných existenčních případech."
+          note="Na Donio si můžete požádat o založení veřejné sbírky v případech, kdy těžkou životní situaci nezvládnete sami, s Adámkem jsme sbírku využili v době hospitalizace v roce 2021."
           logo='/img/donio.svg'
         />
         <HelpBox
